--- a/VivaioBashar/pagina2.html
+++ b/VivaioBashar/pagina2.html
@@ -9,7 +9,7 @@
 
     <body>
         <div class="title_header">
-            <img src="img/Main Page/TreeLogo.png" class="logo">
+        <img src="img/Main Page/TreeLogo.png" class="logo">
             <span class="title"> Vivaio "La grande sequoia" </span>
         </div>
 
@@ -18,35 +18,18 @@
         </nav>
 
         <div class="page_container">
-            <div class="scroll_bar">
+            <div class="scroll_bar" id="listaAlberi">
                 <span class="desc_title"> Alberi </span><br>
-                <div class="plant_box">
-                    <img src="img/Alberi e Arbusti/Acer.jpg">
-                    <span class="plant_description">
-                    <b>Acer palmatum:</b> Albero ornamentale molto apprezzato per le sue foglie palmate che in autunno assumono colori vivaci dal rosso al dorato. Ama la luce filtrata e terreni ben drenati. Perfetto per creare un punto focale elegante in giardino o in vaso grande.</span>
-                </div>
-                <div class="plant_box">
-                    <img src="img/Alberi e Arbusti/Betula.jpg">
-                    <span class="plant_description">
-                    <b>Betula pendula:</b> Conosciuta come betulla bianca, presenta una corteccia chiara e foglie leggere che creano un effetto luminoso. Cresce rapidamente e tollera bene il freddo. Ideale per dare verticalità e movimento agli spazi verdi.</span>
-                 </div>
-                <div class="plant_box">
-                    <img src="img/Alberi e Arbusti/Quercus.jpg">
-                    <span class="plant_description">
-                    <b>Quercus robur:</b> La quercia comune è un albero maestoso e longevo, con foglie lobate e una chioma ampia. Richiede spazio e terreni profondi, diventando un simbolo di forza e stabilità nel paesaggio.</span>
-                </div>
-                <div class="plant_box">
-                    <img src="img/Alberi e Arbusti/Prunus.jpg">
-                    <span class="plant_description">
-                    <b>Prunus serrulata:</b> Il celebre ciliegio giapponese, noto per la sua spettacolare fioritura rosa primaverile. Ama posizioni soleggiate e terreni freschi. Dona un tocco poetico e delicato a qualsiasi ambiente.</span>
-                </div>
             </div>
-            <div class="scroll_bar">
+
+            <div class="scroll_bar" id="listaArbusti">
                 <span class="desc_title"> Arbusti </span><br>
             </div>
         </div>
 
         <footer> Progetto di B. IftuRahman (2026) </footer>
 
+        <script src="js/pagina2.js"></script>
     </body>
+
 </html>
