--- a/VivaioBashar/pagina3.html
+++ b/VivaioBashar/pagina3.html
@@ -18,15 +18,16 @@
         </nav>
 
         <div class="page_container">
-            <div class="scroll_bar">
+            <div class="scroll_bar" id="bonsaiA">
                 <span class="desc_title"> Bonsai 1</span><br>
             </div>
-            <div class="scroll_bar">
+            <div class="scroll_bar" id="bonsaiB">
                 <span class="desc_title"> Bonsai 2</span><br>
             </div>
         </div>
         
         <footer> Progetto di B. IftuRahman (2026) </footer>
 
+        <script src="js/pagina3.js"></script>
     </body>
 </html>
