--- a/VivaioBashar/index.html
+++ b/VivaioBashar/index.html
@@ -11,7 +11,7 @@
             <div class="title_header">
                 <img src="img/Main Page/TreeLogo.png" class="logo">
                 <span class="title"> Vivaio "La grande sequoia" </span>
-                <a href="https://maps.app.goo.gl/75GgJfCoWUa9RT326"><img src="img/waypoint.png" class="waypoint"></a>
+                <a href="paginaMappa.html"><img src="img/waypoint.png" class="waypoint"></a>
             </div>
 
             <nav class="nav_principale">
